k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: datoscope-api
  namespace: datoscope
spec:
  selector:
    app: datoscope-api
  ports:
    - port: 8000
      targetPort: 8000
